fix: missing margin

--- a/src/Components/SpeakerSection/SpeakerSection.css
+++ b/src/Components/SpeakerSection/SpeakerSection.css
@@ -18,6 +18,7 @@
 }
 
 .speakers__container {
+    margin: 3rem 0;
     display: grid;
     grid-template-columns: repeat(3, 0.3fr);
     grid-template-rows: repeat(2, 1fr);
